[package]
name = "framegrabber"
version = "0.1.0"
edition = "2021"
description = "UDP frame capture and DSQL file generation"

[[bin]]
name = "framegrabber"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
bytes = { workspace = true }
socket2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_ini = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
num-traits = { workspace = true }
chrono = { workspace = true }

# GUI dependencies
eframe = { workspace = true }
egui = { workspace = true }

# [dev-dependencies]
# tempfile = { workspace = true }
