[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "Shared types and utilities for Universal Instrument Control Rust components"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
num-traits = { workspace = true }
regex = "1.0"

# [dev-dependencies]
# tempfile = { workspace = true }
